--- a/src/pages/SobreMi/SobreMi.css
+++ b/src/pages/SobreMi/SobreMi.css
@@ -19,7 +19,8 @@
 .contac-btn{
     width: 200px;
     height: 70px;
-    color: #0D6EFD;
+    border-radius: 5px;
+    background-color: #0D6EFD;
     transition: transform .3s ease;
 }
 
