--- a/src/pages/SobreMi/SobreMi.css
+++ b/src/pages/SobreMi/SobreMi.css
@@ -17,15 +17,18 @@
 }
 
 .contac-btn{
-    width: 200px;
-    height: 70px;
+    width: 150px;
+    height: 50px;
     border-radius: 5px;
+    border: none;
+    color: white;
+    font-weight: 500;
     background-color: #0D6EFD;
     transition: transform .3s ease;
 }
 
 .contac-btn:hover{
-    transform: scale(1.2);
+    transform: scale(1.1);
 }
 
 
