--- a/src/components/Splide/SliderProjects.css
+++ b/src/components/Splide/SliderProjects.css
@@ -1,7 +1,7 @@
 
 .splide{
    width: 500px;
-   margin-right: 3em;
+   margin-left: -1em;
 }
 
 
@@ -13,7 +13,7 @@
 }
 
 .splide__track{
-    margin-right: 20px;
+    margin-right: 30px;
 }
 
 .splide__slide img {
