--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
 
 
 *,
@@ -9,11 +9,21 @@
   padding: 0;
 }
 
+
+
 body{
-  font-family: "Sora", sans-serif;
+  font-family: "Urbanist", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+}
+
+.bod{
+  position: relative;
+}
+
+.btn-download{
+  position: fixed;
 }
 
 
