--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,5 +1,68 @@
+:root{
+    --bs-body-bg: #102447;
+    --bs-border-width: 2px;
+}
+
+
+.modal{
+    --bs-modal-bg: var(--bs-body-bg);
+    --bs-modal-header-border-width: var(--bs-border-width);
+}
+header{
+    width: 100vw;
+    height: 100px;
+    background-color: #fff;
+    box-shadow: 0px 3px 8px rgba(0, 0, 0, 25%);
+    position: fixed;
+    z-index: 100;
+}
+
+header .container-fluid{
+    width: 100%;
+    padding: 0 60px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    overflow-x: hidden;
+    margin-bottom: 50px;
+}
+
+header .navb-logo img{
+    margin-left: -40px;
+    width: 100px;
+}
+
+header .nav-items{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    letter-spacing: 3px;
+}
+
+header .item{
+    text-align: center;
+    margin-inline: 15%;
+    font-size: 20px;
+    letter-spacing: 3px;
+    color: #102447;
+    padding: 5px 0;
+    transition: all .2s ease;
+    border-bottom: 0px solid #64d6f4;
+    border-top: 0px solid #64d6f4;
+    cursor: pointer;
+}
+.nav-link{
+    color: currentColor;
+}
 .navbar-nav{
-    align-items: flex-end;
+    align-items: center;
+}
+
+.mobile-toggler:hover{
+    cursor: pointer;
+}
+.navbar-nav-scroll {
+    overflow: visible;
 }
 
 .navbar-brand{
@@ -28,17 +91,154 @@
     margin-right: 1em;
 }
 
-.menu-container{
+.nav-container{
+    position: fixed;
     top: 0;
+    left: 0;
     bottom: 0;
-    z-index: 5;
-   overflow-x: hidden;
+    z-index: 100;
 }
 
 .me-auto{
     display: flex;
     justify-content: space-between;
 }
+
+.bi-moon-fill{
+    background-color: black;
+    color: white;
+}
+
+.modal-header img{
+    width: 100px;
+}
+
+@media all and (max-width: 990px){
+    .nav-items .item{
+        display: none;
+    }
+}
+
+
+/*Modal*/
+
+.modal-dialog{
+    margin: 0 !important;
+    width: 430px;
+}
+
+@media(max-width: 450px){
+    .modal-dialog{
+        width: 82px;
+    }
+}
+
+.modal-content{
+    border-radius: 0;
+    height: 100vh;
+    overflow-y: scroll;
+    background: #102447 !important;
+    color: white !important;
+}
+
+.modal-backdrop{
+    --bs-backdrop-bg: #fff;
+     background-color: var(--bs-backdrop-bg);
+}
+
+.modal-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 88%;
+    margin: 0 auto;
+    padding-bottom: 16px;
+    border-bottom: 2px solid #fefefe !important;
+}
+
+.modal-header img {
+    width: 120px;
+    height: 100px;
+    margin-top: 17.5px;
+}
+
+.modal-header .btn-close{
+    opacity: 1;
+    color: white;
+    font-size: 20px;
+}
+
+.modal-body{
+    width: 88%;
+    margin: 0 auto;
+    padding: 75px 0 0 0;
+    flex: unset;
+}
+
+.modal-body .modal-line{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 7px 0;
+    margin-bottom: 50px;
+    cursor: pointer;
+    transition: all 5s ease;
+    color: #274d8a;
+    border-bottom: 1px solid #274d8a;
+}
+
+.modal-body .modal-line:hover{
+    color: #fefefe;
+    border-bottom: 1px solid #fefefe;
+}
+
+.modal-line a{
+    font-size: 17px;
+    font-weight: 500;
+    letter-spacing: 2.5px;
+    color: #fefefe;
+    display: flex;
+    align-items: center;
+}
+
+.modal-line svg{
+    color: currentColor;
+    font-size: 30px;
+    width: 35px;
+    margin-right: 15px;
+    padding: 0 0 3px 3px;
+}
+
+.modal-footer{
+    border-top: none !important;
+    justify-content: center !important;
+    gap: 10px;
+}
+
+.modal-footer .btn{
+    width: 150px;
+    transition: transform .3s ease;
+}
+
+.modal-footer .btn a svg{
+    margin-right: 10px;
+}
+
+.modal-footer .btn:hover{
+   transform: scale(1.1);
+}
+
+/* .navb-button{
+    width: 100%;
+    height: 47px;
+    background-color: #fefefe;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} */
+
+
 
 
 
