--- a/src/components/Splide/SliderProjects.css
+++ b/src/components/Splide/SliderProjects.css
@@ -1,31 +1,76 @@
+.card{
+    display: block;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.7);
+    overflow: hidden;
+    cursor: pointer;
+    transition: .5s;
+    position: relative;
+}
 
-.splide{
-   width: 500px;
-   margin-left: -1em;
+.card-content{
+    position: absolute;
+    background-color: rgb(0 0 0/50%);
+    bottom: 0;
+    color: #fff;
+    width: 100%;
+    height: 20%;
+    padding: 2.2rem 0;
+    overflow: hidden;
+    transition: 0.7s;
+}
+
+.card-content:hover{
+    height: 40%;
+    transition: 0.7s;
 }
 
 
+.img-box{
+    height: 100%;
+}
+.img-box img{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   width: 100%;
+   height: 100%;
+   object-fit: cover; 
+   background-size: cover;
+   z-index: 20;
+}
+.title{
+    font-size: 2rem;
+    font-weight: 600;
+    text-transform: capitalize;
+    text-align: center;
+}
+
+.card__text{
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5rem;
+    padding: 1.2rem;
+}
+
+.tech__container{
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+.tech__item img{
+    width: 20px;
+}
+
+.splide{
+    width: 600px;
+    aspect-ratio: .8;
+    display: flex;
+}
 
 .splide__slide{
     display: flex;
     justify-content: center;
-    align-items: center;
-}
-
-.splide__track{
-    margin-right: 30px;
-}
-
-.splide__slide img {
-    width: 80%;
-    height: auto;
-}
-
-@media all and (max-width: 430px){
-    .splide{
-        width: 420px;
-        margin-right: 3em;
-     }
 }
 
 
