--- a/src/pages/Skills/Skills.css
+++ b/src/pages/Skills/Skills.css
@@ -1,8 +1,9 @@
 .skills{
-    display: grid;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 100%;
     gap: 10px;
-    grid-template-columns: repeat(2, 50%);
 }
 
 .skills-header{
@@ -10,7 +11,7 @@
     flex-direction: column;
     margin: 0 auto;
     padding: 15px;
-    z-index: 3;
+
 }
 
 .skills-title{
@@ -22,9 +23,7 @@
     font-size: 20px;
 }
 
-.skills__slider{
-   z-index: 1;
-}
+
 .skills-list{
     list-style: none;
     text-align: center;
@@ -48,7 +47,7 @@
 }
 
 @media all and (max-width: 430px){
-    .skills__slider{
+    .skills__cards{
        display: flex;
        justify-content: center;
        width: 200px;
