--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -8,8 +8,9 @@
     --bs-modal-bg: var(--bs-body-bg);
     --bs-modal-header-border-width: var(--bs-border-width);
 }
-header{
-    width: 100vw;
+.header__nav{
+    max-width: 1500px;
+    width: 100%;
     height: 100px;
     background-color: #fff;
     box-shadow: 0px 3px 8px rgba(0, 0, 0, 25%);
@@ -17,7 +18,7 @@ header{
     z-index: 100;
 }
 
-header .container-fluid{
+.header__nav .container-fluid{
     width: 100%;
     padding: 0 60px;
     display: flex;
@@ -27,19 +28,19 @@ header .container-fluid{
     margin-bottom: 50px;
 }
 
-header .navb-logo img{
+.header__nav .navb-logo img{
     margin-left: -40px;
     width: 100px;
 }
 
-header .nav-items{
+.header__nav .nav-items{
     display: flex;
     align-items: center;
     justify-content: flex-end;
     letter-spacing: 3px;
 }
 
-header .item{
+.header__nav .item{
     text-align: center;
     margin-inline: 15%;
     font-size: 20px;
@@ -119,12 +120,18 @@ header .item{
     }
 }
 
+@media all and (max-width:800px){
+    .header__nav{
+      width: 100%;
+    }
+}
+
 
 /*Modal*/
 
 .modal-dialog{
     margin: 0 !important;
-    width: 430px;
+    width: 380px;
 }
 
 @media(max-width: 450px){
