--- a/src/pages/SobreMi/SobreMi.css
+++ b/src/pages/SobreMi/SobreMi.css
@@ -1,9 +1,9 @@
 .about-container{
+    margin-top: 60px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 500px;
 }
 
 .about-title{
