--- a/src/components/Carrousel/CardSkills.css
+++ b/src/components/Carrousel/CardSkills.css
@@ -1,6 +1,3 @@
-section:hover{
-  cursor: pointer;
-}
 
 
 .content{
@@ -9,6 +6,8 @@ section:hover{
     justify-content: center;
     align-items: center;
     gap: 1em;
+    width: 300px;
+    aspect-ratio: .6;
 }
 
 
