--- a/src/pages/Skills/Skills.css
+++ b/src/pages/Skills/Skills.css
@@ -33,6 +33,10 @@
     font-size: 20px;
 }
 
+.skills__cards{
+    margin-bottom: 20px;
+}
+
 @media all and (max-width: 800px){
     .skills{
        display: flex;
@@ -50,7 +54,6 @@
     .skills__cards{
        display: flex;
        justify-content: center;
-       width: 200px;
     }
 }
 
